recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:8: error: not found: value a
     if (l.head == a){
                   ^Occurrences:11: error: not found: value L
  return 1 + occurrences(L.tail,a);
                         ^Occurrences:11: error: not found: value a
  return 1 + occurrences(L.tail,a);
                                ^Occurrences:15: error: not found: value a
      return occurrences(l.tail,a);
                                ^